Fixed incorrect vertical alignment of logos in navbar

--- a/css/src/theme-menu.scss
+++ b/css/src/theme-menu.scss
@@ -19,6 +19,10 @@
 
     .navbar-brand {
       position: absolute;
+
+      img {
+        margin-top: 2px;
+      }
     }
 
     &.pull-left > .navbar-brand {
